...
    val imageRes: Int, // айди изображения
    val quotes: List<String>
)

val moods = listOf(
    Mood(
        name = "Радость",
        imageRes = R.drawable.mood_joy,
        quotes = listOf(
            "Счастье — это выбор!",
            "Сияй как солнце!",
            "Сегодня прекрасный день",
            "Твоя улыбка заразительна"
        )
    ),
    Mood(
        name = "Спокойствие",
        imageRes = R.drawable.mood_calm,
        quotes = listOf(
            "Покой приходит изнутри",
            "Алкоголь убивает нервные клетки - остаются только спокойные",
            "Найди свой внутренний дзен",
            "Тишина говорит о многом"
...
